--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1544,6 +1544,11 @@ video {
   background-color: rgb(220 252 231 / var(--tw-bg-opacity));
 }
 
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
 .bg-orange-500{
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
@@ -1557,6 +1562,16 @@ video {
 .bg-purple-600{
   --tw-bg-opacity: 1;
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-rose-500{
@@ -1591,31 +1606,6 @@ video {
 .bg-violet-600{
   --tw-bg-opacity: 1;
   background-color: rgb(124 58 237 / var(--tw-bg-opacity));
-}
-
-.bg-green-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-green-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
-
-.bg-green-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
-.bg-red-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -2324,6 +2314,71 @@ option:hover {
 
 .booking_btn:hover:before {
   transform: translateX(150%);
+}
+
+/* Loader styles */
+
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  flex-direction: column;
+}
+
+.loader {
+  --r1: 154%;
+  --r2: 68.5%;
+  width: 80px;
+  aspect-ratio: 1;
+  border-top-left-radius: 30%;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 30%;
+  border-bottom-left-radius: 50%;
+  background: radial-gradient(
+      var(--r1) var(--r2) at top,
+      #0000 79.5%,
+      #7c3aed 80%
+    ),
+    radial-gradient(var(--r1) var(--r2) at bottom, #7c3aed 79.5%, #0000 80%),
+    radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #7c3aed 80%),
+    rgba(204, 181, 244, 0.7);
+  background-size: 50.5% 220%;
+  background-position:
+    -100% 0%,
+    0% 0%,
+    100% 0%;
+  background-repeat: no-repeat;
+  animation: l9 6s infinite linear;
+}
+
+@keyframes l9 {
+  33% {
+    background-position:
+      0% 33%,
+      100% 33%,
+      200% 33%;
+  }
+
+  66% {
+    background-position:
+      -100% 66%,
+      0% 66%,
+      100% 66%;
+  }
+
+  100% {
+    background-position:
+      0% 100%,
+      100% 100%,
+      200% 100%;
+  }
 }
 
 .hover\:scale-105:hover{
